Add pokemon web apiAdd project files.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,10 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-69BQRTT;Initial Catalog=pokemonreview;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    //"DefaultConnection": "Data Source=192.241.144.151;Initial Catalog=pokemonreview;User ID=sa;Password=Joankirui3191;"
+    //"DefaultConnection": "Data Source=192.241.144.151;Initial Catalog=pokemonreview;User ID=sa;Password=Joankirui3191;",
+    //"DefaultConnection": "Data Source=DESKTOP-69BQRTT;Initial Catalog=pokemonreview;Integrated Security=True",
+    "DefaultConnection": "Data Source=DESKTOP-69BQRTT;Initial Catalog=pokemonreview;Persist Security Info=True;User ID=Joan;Password=joankirui"
+
   },
   "Logging": {
     "LogLevel": {
